--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <script src="Ground.js"></script>
       <script src="Stone.js"></script>
       <script src="mango.js"></script>
+      <script src="slingShot.js"></script>
 
     </head>
     <body>
